writing-a-c-compiler-tests/tests/chapter_9/valid/no_arguments/function_shadows_variable.c
int main(void) {
    int foo = 3;
    int bar = 4;
    if (foo + bar > 0) {
        
        int foo(void);
        bar = foo();
    }
    
    return foo + bar;
}

int foo(void) {
    return 8;
}