writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/nested_function_definition.c
int main(void) {
    
    int foo(void) {
        return 1;
    }
    return foo();
}